[package]
name = "complexfloat"
version = "0.1.1"
authors = ["bluss"]

license = "MIT/Apache-2.0"

repository = "https://github.com/bluss/complexfloat"
documentation = "https://bluss.github.io/complexfloat/"

description = "A trait for generics over f32, f64 and Complex<f32>, Complex<f64>, and a more complete trait for just f32, f64 too."

keywords = ["numerics", "math"]

[dependencies]

num-traits = { version = "0.1", default-features = false }
num-complex = { version = "0.1", default-features = false }
asprim = "0.1"
